--- a/Zaxxon/Zaxxon.vcxproj.filters
+++ b/Zaxxon/Zaxxon.vcxproj.filters
@@ -68,9 +68,6 @@
     <ClInclude Include="laser.h">
       <Filter>Header Files\entities</Filter>
     </ClInclude>
-    <ClInclude Include="isoVector.h">
-      <Filter>Header Files\entities</Filter>
-    </ClInclude>
     <ClInclude Include="constants.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -96,6 +93,9 @@
       <Filter>Header Files\core</Filter>
     </ClInclude>
     <ClInclude Include="component.h">
+      <Filter>Header Files\core</Filter>
+    </ClInclude>
+    <ClInclude Include="isoVector.h">
       <Filter>Header Files\core</Filter>
     </ClInclude>
   </ItemGroup>
